@@ -2,9 +2,10 @@ Pending changes in the mainline
 ===============================
 
 * Refactoring of HttpOutput ("Content-Length" header is now always sent)
+* "/tools/create-dicom" now accepts the "PatientID" DICOM tag (+ updated sample)
 * Fixes for Visual Studio 2013 and Windows 64bit
-* Experimental "KeepAlive" configuration option to enable HTTP Keep-Alive
 * Upgrade to Mongoose 3.8
+* Experimental "KeepAlive" configuration option to enable HTTP Keep-Alive
 
 
 Version 0.8.2 (2014/08/07)
